--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scripts with timer for device management.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- -u exports --reporter spec --recursive"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,11 @@
   "homepage": "https://github.com/atrovato/gladys-timer#readme",
   "dependencies": {
     "bluebird": "^3.5.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "proxyquire": "^2.1.0"
   }
 }
